# gcp-auditor

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
scripts/: generate_demo_gif.py  generate_report_screenshot.py
src/cloud_audit/: __init__.py  __main__.py  cli.py  config.py  cvss.py  models.py  scanner.py
src/cloud_audit/providers/: __init__.py  base.py
src/cloud_audit/providers/gcp/: __init__.py  provider.py
src/cloud_audit/providers/gcp/checks/: __init__.py  bigquery.py  cloudsql.py  compute.py  gke.py  iam.py  kms.py  logging_.py  storage.py
src/cloud_audit/reports/: __init__.py  html.py  markdown.py  sarif.py
src/cloud_audit/reports/templates/: report.html.j2
tests/: conftest.py  test_cli.py  test_models.py
